xidlc/tests/snapshots/codegen_snapshot__ts-http__http_response_shape.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_response_shape.client.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_response_shape";

import type * as ifaceTypes from "./http_response_shape.iface";
import * as ifaceSchemas from "./http_response_shape.iface.zod";
import { z } from "zod";
import { deserialize } from "xidl-typescript-codec";
import {
    appendCookie,
    appendHeader,
    appendParam,
    applyClientAuth,
    applyCookies,
    byteResponseStream,
    buildResponsePayload,
    byteStreamBody,
    decodeOptionalResponseBody,
    decodeResponseBody,
    encodePathCatchAll,
    encodePathSegment,
    encodeRequestBody,
    joinUrl,
    ndjsonBody,
    parseXidlError,
    resolveFetch,
    sseJsonStream,
    type ClientAuth,
    type ClientOptions,
    type FetchLike,
    type HttpCodec,
} from "xidl-typescript-client";

    

    export class HttpResponseShapeServiceClient {
        private readonly baseUrl: string;
        private readonly fetchImpl: FetchLike;
        private readonly defaultHeaders: Record<string, string>;
        private readonly auth?: ClientAuth;
        private readonly codecs: Record<string, HttpCodec>;

        constructor(baseUrl: string, options: ClientOptions = {}) {
            this.baseUrl = baseUrl;
            this.fetchImpl = resolveFetch(options.fetch);
            this.defaultHeaders = options.headers ?? {};
            this.auth = options.auth;
            this.codecs = options.codecs ?? {};
        }
        
            async hello(): Promise<string> {
                let xidlPath = "/hello";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "POST", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
    }
    
            async get_count(): Promise<ifaceTypes.HttpResponseShapeServiceGetCountResponse> {
                let xidlPath = "/get_count";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "POST", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        const responseBody = await decodeOptionalResponseBody(resp, "text/plain", this.codecs);
        const responsePayload = buildResponsePayload(responseBody, resp, "return", [{ wireName: "count", key: "count" }], [], []);
        return ifaceSchemas.HttpResponseShapeServiceGetCountResponseSchema.parse(deserialize(responsePayload, ifaceSchemas.HttpResponseShapeServiceGetCountResponseSchema)) as ifaceTypes.HttpResponseShapeServiceGetCountResponse;
    }
    
            async add(a: number, b: number): Promise<ifaceTypes.HttpResponseShapeServiceAddResponse> {
                const parsed = ifaceSchemas.HttpResponseShapeServiceAddRequestSchema.parse({ "a": a, "b": b });
                let xidlPath = "/add";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                const xidlBody = { "a": parsed["a"], "b": parsed["b"] };
        headers.set("Content-Type", "application/json");
        
        headers.set("Accept", "application/json");
        const resp = await this.fetchImpl(url, { method: "POST", headers, body: encodeRequestBody(xidlBody, "application/json", this.codecs, ifaceSchemas.HttpResponseShapeServiceAddRequestSchema) });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        const responseBody = await decodeOptionalResponseBody(resp, "application/json", this.codecs);
        const responsePayload = buildResponsePayload(responseBody, resp, "object", [{ wireName: "return", key: "return" }, { wireName: "sum", key: "sum" }], [], []);
        return ifaceSchemas.HttpResponseShapeServiceAddResponseSchema.parse(deserialize(responsePayload, ifaceSchemas.HttpResponseShapeServiceAddResponseSchema)) as ifaceTypes.HttpResponseShapeServiceAddResponse;
    }
    
            async bump(value: number): Promise<ifaceTypes.HttpResponseShapeServiceBumpResponse> {
                const parsed = ifaceSchemas.HttpResponseShapeServiceBumpRequestSchema.parse({ "value": value });
                let xidlPath = "/bump";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                const xidlBody = parsed["value"];
        headers.set("Content-Type", "text/plain");
        
        headers.set("Accept", "application/json");
        const resp = await this.fetchImpl(url, { method: "POST", headers, body: encodeRequestBody(xidlBody, "text/plain", this.codecs, ifaceSchemas.HttpResponseShapeServiceBumpRequestSchema) });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        const responseBody = await decodeOptionalResponseBody(resp, "application/json", this.codecs);
        const responsePayload = buildResponsePayload(responseBody, resp, "object", [{ wireName: "return", key: "return" }, { wireName: "value", key: "value" }], [], []);
        return ifaceSchemas.HttpResponseShapeServiceBumpResponseSchema.parse(deserialize(responsePayload, ifaceSchemas.HttpResponseShapeServiceBumpResponseSchema)) as ifaceTypes.HttpResponseShapeServiceBumpResponse;
    }
    
            async ping(): Promise<void> {
                let xidlPath = "/ping";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "");
        const resp = await this.fetchImpl(url, { method: "POST", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return;
    }
    
    
}
===============
http_response_shape.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



export {};
===============
http_response_shape.iface.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.




    

export interface HttpResponseShapeServiceGetCountResponse {
        count: number;
        }

    

export interface HttpResponseShapeServiceAddRequest {
        a: number;
            b: number;
        }

    

export interface HttpResponseShapeServiceAddResponse {
        return: number;
            sum: number;
        }

    

export interface HttpResponseShapeServiceBumpRequest {
        value: number;
        }

    

export interface HttpResponseShapeServiceBumpResponse {
        return: number;
            value: number;
        }

export {};
===============
http_response_shape.iface.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";


    
export const HttpResponseShapeServiceGetCountResponseSchema = z.object({
        count: z.coerce.number().int(),
    });
export type HttpResponseShapeServiceGetCountResponse = z.infer<typeof HttpResponseShapeServiceGetCountResponseSchema>;

    
export const HttpResponseShapeServiceAddRequestSchema = z.object({
        a: z.coerce.number().int(),
        b: z.coerce.number().int(),
    });
export type HttpResponseShapeServiceAddRequest = z.infer<typeof HttpResponseShapeServiceAddRequestSchema>;

    
export const HttpResponseShapeServiceAddResponseSchema = z.object({
        return: z.coerce.number().int(),
        sum: z.coerce.number().int(),
    });
export type HttpResponseShapeServiceAddResponse = z.infer<typeof HttpResponseShapeServiceAddResponseSchema>;

    
export const HttpResponseShapeServiceBumpRequestSchema = z.object({
        value: z.coerce.number().int(),
    });
export type HttpResponseShapeServiceBumpRequest = z.infer<typeof HttpResponseShapeServiceBumpRequestSchema>;

    
export const HttpResponseShapeServiceBumpResponseSchema = z.object({
        return: z.coerce.number().int(),
        value: z.coerce.number().int(),
    });
export type HttpResponseShapeServiceBumpResponse = z.infer<typeof HttpResponseShapeServiceBumpResponseSchema>;
===============
http_response_shape.server.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_response_shape";

import type * as ifaceTypes from "./http_response_shape.iface";
import * as ifaceSchemas from "./http_response_shape.iface.zod";
import { z } from "zod";
import {
    defineOperation,
    type Awaitable,
} from "xidl-typescript-server";

    
export interface HttpResponseShapeService {
    
        hello(): Awaitable<string>;
    
        get_count(): Awaitable<ifaceTypes.HttpResponseShapeServiceGetCountResponse>;
    
        add(a: number, b: number): Awaitable<ifaceTypes.HttpResponseShapeServiceAddResponse>;
    
        bump(value: number): Awaitable<ifaceTypes.HttpResponseShapeServiceBumpResponse>;
    
        ping(): Awaitable<void>;
    
}

export const HttpResponseShapeServiceOperations = {
    
        hello: defineOperation<HttpResponseShapeService, "hello">({
            handler: "hello",
            method: "POST",
            path: "/hello",
            paths: ["/hello"],
            request: {
                kind: "none",
                args: [],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
        get_count: defineOperation<HttpResponseShapeService, "get_count">({
            handler: "get_count",
            method: "POST",
            path: "/get_count",
            paths: ["/get_count"],
            request: {
                kind: "none",
                args: [],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "count", key: "count" }],
            headers: [],
            cookies: [],
            schema: ifaceSchemas.HttpResponseShapeServiceGetCountResponseSchema,
            stream: false,
            
        },
        security: [],
        
    }),
    
        add: defineOperation<HttpResponseShapeService, "add">({
            handler: "add",
            method: "POST",
            path: "/add",
            paths: ["/add"],
            request: {
                kind: "object",
                args: ["a", "b"],
                schema: ifaceSchemas.HttpResponseShapeServiceAddRequestSchema,
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "value",
                    contentType: "application/json",
                    fields: [{ wireName: "a", key: "a" }, { wireName: "b", key: "b" }],
                    schema: ifaceSchemas.HttpResponseShapeServiceAddRequestSchema,
                
            },
        },
        response: {
            contentType: "application/json",
            bodyMode: "object",
            bodyFields: [{ wireName: "return", key: "return" }, { wireName: "sum", key: "sum" }],
            headers: [],
            cookies: [],
            schema: ifaceSchemas.HttpResponseShapeServiceAddResponseSchema,
            stream: false,
            
        },
        security: [],
        
    }),
    
        bump: defineOperation<HttpResponseShapeService, "bump">({
            handler: "bump",
            method: "POST",
            path: "/bump",
            paths: ["/bump"],
            request: {
                kind: "object",
                args: ["value"],
                schema: ifaceSchemas.HttpResponseShapeServiceBumpRequestSchema,
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "value",
                    contentType: "text/plain",
                    fields: [{ wireName: "value", key: "value" }],
                    singleKey: "value",
                    schema: ifaceSchemas.HttpResponseShapeServiceBumpRequestSchema,
                
            },
        },
        response: {
            contentType: "application/json",
            bodyMode: "object",
            bodyFields: [{ wireName: "return", key: "return" }, { wireName: "value", key: "value" }],
            headers: [],
            cookies: [],
            schema: ifaceSchemas.HttpResponseShapeServiceBumpResponseSchema,
            stream: false,
            
        },
        security: [],
        
    }),
    
        ping: defineOperation<HttpResponseShapeService, "ping">({
            handler: "ping",
            method: "POST",
            path: "/ping",
            paths: ["/ping"],
            request: {
                kind: "none",
                args: [],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "",
            bodyMode: "none",
            bodyFields: [],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
} as const;
===============
http_response_shape.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";
