xidlc/tests/snapshots/codegen_snapshot__ts-http__http_security.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_security.client.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_security";

import type * as ifaceTypes from "./http_security.iface";
import * as ifaceSchemas from "./http_security.iface.zod";
import { z } from "zod";
import { deserialize } from "xidl-typescript-codec";
import {
    appendCookie,
    appendHeader,
    appendParam,
    applyClientAuth,
    applyCookies,
    byteResponseStream,
    buildResponsePayload,
    byteStreamBody,
    decodeOptionalResponseBody,
    decodeResponseBody,
    encodePathCatchAll,
    encodePathSegment,
    encodeRequestBody,
    joinUrl,
    ndjsonBody,
    parseXidlError,
    resolveFetch,
    sseJsonStream,
    type ClientAuth,
    type ClientOptions,
    type FetchLike,
    type HttpCodec,
} from "xidl-typescript-client";

    

    export class HttpSecurityServiceClient {
        private readonly baseUrl: string;
        private readonly fetchImpl: FetchLike;
        private readonly defaultHeaders: Record<string, string>;
        private readonly auth?: ClientAuth;
        private readonly codecs: Record<string, HttpCodec>;

        constructor(baseUrl: string, options: ClientOptions = {}) {
            this.baseUrl = baseUrl;
            this.fetchImpl = resolveFetch(options.fetch);
            this.defaultHeaders = options.headers ?? {};
            this.auth = options.auth;
            this.codecs = options.codecs ?? {};
        }
        
            async get_user(id: number): Promise<string> {
                const parsed = ifaceSchemas.HttpSecurityServiceGetUserRequestSchema.parse({ "id": id });
                let xidlPath = "/users/{id}";
                xidlPath = xidlPath.replace("{" + "id" + "}", encodePathSegment(id));
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, [{ kind: "basic" }, { kind: "api_key", location: "header", name: "X-API-Key" }]);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
    }
    
            async whoami(): Promise<string> {
                let xidlPath = "/whoami";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, [{ kind: "bearer" }]);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "GET", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
    }
    
            async search_user(keyword: string): Promise<string> {
                const parsed = ifaceSchemas.HttpSecurityServiceSearchUserRequestSchema.parse({ "keyword": keyword });
                let xidlPath = "/users/search";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                const xidlBody = parsed["keyword"];
        headers.set("Content-Type", "text/plain");
        
        headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "POST", headers, body: encodeRequestBody(xidlBody, "text/plain", this.codecs, ifaceSchemas.HttpSecurityServiceSearchUserRequestSchema) });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
    }
    
            async health(): Promise<string> {
                let xidlPath = "/health";
                const query = new URLSearchParams();
                const headers = new Headers(this.defaultHeaders);
                const cookies: string[] = [];
                applyCookies(headers, cookies);
                applyClientAuth(xidlPath, query, headers, this.auth, []);
                const queryString = query.toString();
                if (queryString.length > 0) {
                    xidlPath = `${xidlPath}?${queryString}`;
                }
                const url = joinUrl(this.baseUrl, xidlPath);
                headers.set("Accept", "text/plain");
        const resp = await this.fetchImpl(url, { method: "POST", headers });
        if (!resp.ok) {
            throw await parseXidlError(resp);
            
        }
        return await decodeResponseBody<string>(resp, "text/plain", this.codecs);
    }
    
    
}
===============
http_security.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.



export {};
===============
http_security.iface.d.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.




    

export interface HttpSecurityServiceGetUserRequest {
        id: number;
        }

    

export interface HttpSecurityServiceSearchUserRequest {
        keyword: string;
        }

export {};
===============
http_security.iface.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";


    
export const HttpSecurityServiceGetUserRequestSchema = z.object({
        id: z.coerce.number().int().nonnegative(),
    });
export type HttpSecurityServiceGetUserRequest = z.infer<typeof HttpSecurityServiceGetUserRequestSchema>;

    
export const HttpSecurityServiceSearchUserRequestSchema = z.object({
        keyword: z.coerce.string(),
    });
export type HttpSecurityServiceSearchUserRequest = z.infer<typeof HttpSecurityServiceSearchUserRequestSchema>;
===============
http_security.server.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import type * as types from "./http_security";

import type * as ifaceTypes from "./http_security.iface";
import * as ifaceSchemas from "./http_security.iface.zod";
import { z } from "zod";
import {
    defineOperation,
    type Awaitable,
} from "xidl-typescript-server";

    
export interface HttpSecurityService {
    
        get_user(id: number): Awaitable<string>;
    
        whoami(): Awaitable<string>;
    
        search_user(keyword: string): Awaitable<string>;
    
        health(): Awaitable<string>;
    
}

export const HttpSecurityServiceOperations = {
    
        get_user: defineOperation<HttpSecurityService, "get_user">({
            handler: "get_user",
            method: "GET",
            path: "/users/{id}",
            paths: ["/users/{id}"],
            request: {
                kind: "object",
                args: ["id"],
                schema: ifaceSchemas.HttpSecurityServiceGetUserRequestSchema,
                path: [{ parameter: "id", wireName: "id", key: "id", multi: false, catchAll: false }],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [{ kind: "basic" }, { kind: "api_key", location: "header", name: "X-API-Key" }],
        
    }),
    
        whoami: defineOperation<HttpSecurityService, "whoami">({
            handler: "whoami",
            method: "GET",
            path: "/whoami",
            paths: ["/whoami"],
            request: {
                kind: "none",
                args: [],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [{ kind: "bearer" }],
        
    }),
    
        search_user: defineOperation<HttpSecurityService, "search_user">({
            handler: "search_user",
            method: "POST",
            path: "/users/search",
            paths: ["/users/search"],
            request: {
                kind: "object",
                args: ["keyword"],
                schema: ifaceSchemas.HttpSecurityServiceSearchUserRequestSchema,
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "value",
                    contentType: "text/plain",
                    fields: [{ wireName: "keyword", key: "keyword" }],
                    singleKey: "keyword",
                    schema: ifaceSchemas.HttpSecurityServiceSearchUserRequestSchema,
                
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
        health: defineOperation<HttpSecurityService, "health">({
            handler: "health",
            method: "POST",
            path: "/health",
            paths: ["/health"],
            request: {
                kind: "none",
                args: [],
                path: [],
                query: [],
                headers: [],
                cookies: [],
                body: {
                    kind: "none",
                    contentType: "",
                    fields: [],
                    
            },
        },
        response: {
            contentType: "text/plain",
            bodyMode: "return",
            bodyFields: [{ wireName: "return", key: "return" }],
            headers: [],
            cookies: [],
            stream: false,
            
        },
        security: [],
        
    }),
    
} as const;
===============
http_security.zod.ts
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.


import { z } from "zod";
import { xjson } from "xidl-typescript-codec";
